--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Idea Bank</title>
+    <title>Hotpot</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Welcome to Idea Bank</h1>
+    <h1>Welcome to Hotpot</h1>
     <form id="loginForm">
         <input type="email" id="email" placeholder="Email">
         <input type="password" id="password" placeholder="Password">
