--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Welcome to Hotpot</h1>
+    <h1>Welcome to Hotpot!</h1>
     <form id="loginForm">
         <input type="email" id="email" placeholder="Email">
         <input type="password" id="password" placeholder="Password">
